--- a/Speech_noteBook.ipynb
+++ b/Speech_noteBook.ipynb
@@ -2,16 +2,158 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f60caec9aa5144b48ec6a70dcd366f36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Record', icon='microphone ', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "94f2303ae4c041e39ce94c24414d1a18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='warning', description='Record', icon='stop', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2b51313d8464f50917913a3cf5290b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets \n",
+    "from IPython.display import display \n",
+    "# from threading import Thread\n",
+    "import _thread\n",
+    "\n",
+    "from queue import Queue\n",
+    "\n",
+    "messages = Queue()\n",
+    "recording = Queue()\n",
+    "\n",
+    "record_button = widgets.Button(\n",
+    "    description= \"Record\", \n",
+    "    disable = False , \n",
+    "    button_style = \"success\",\n",
+    "    icon = \"microphone \"\n",
+    ")\n",
+    "\n",
+    "stop_button = widgets.Button(\n",
+    "    description= \"Record\", \n",
+    "    disable = False , \n",
+    "    button_style = \"warning\",\n",
+    "    icon = \"stop\"\n",
+    ")\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "def start_recording(data):\n",
+    "    messages.put(True)\n",
+    "\n",
+    "    with output: \n",
+    "        display(\"Starting ...\")\n",
+    "        record = _thread(target=record_microphone)\n",
+    "        record.start()\n",
+    "\n",
+    "        transcribe = _thread(target=speech_recognition,args = (output,))\n",
+    "        transcribe.start()\n",
+    "    pass \n",
+    "\n",
+    "def stop_recording(data):\n",
+    "    with output: \n",
+    "        messages.get()\n",
+    "        display(\"Stopped.\")\n",
+    "    pass \n",
+    "\n",
+    "record_button.on_click(start_recording)\n",
+    "stop_button.on_click(stop_recording)\n",
+    "\n",
+    "\n",
+    "display(record_button,stop_button,output)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'index': 0, 'structVersion': 2, 'name': 'sysdefault', 'hostApi': 0, 'maxInputChannels': 128, 'maxOutputChannels': 128, 'defaultLowInputLatency': 0.021333333333333333, 'defaultLowOutputLatency': 0.021333333333333333, 'defaultHighInputLatency': 0.021333333333333333, 'defaultHighOutputLatency': 0.021333333333333333, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 1, 'structVersion': 2, 'name': 'front', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': -1.0, 'defaultLowOutputLatency': 0.005333333333333333, 'defaultHighInputLatency': -1.0, 'defaultHighOutputLatency': 0.032, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 2, 'structVersion': 2, 'name': 'surround40', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': -1.0, 'defaultLowOutputLatency': 0.005333333333333333, 'defaultHighInputLatency': -1.0, 'defaultHighOutputLatency': 0.032, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 3, 'structVersion': 2, 'name': 'surround51', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': -1.0, 'defaultLowOutputLatency': 0.005333333333333333, 'defaultHighInputLatency': -1.0, 'defaultHighOutputLatency': 0.032, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 4, 'structVersion': 2, 'name': 'surround71', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': -1.0, 'defaultLowOutputLatency': 0.005333333333333333, 'defaultHighInputLatency': -1.0, 'defaultHighOutputLatency': 0.032, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 5, 'structVersion': 2, 'name': 'hdmi', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': -1.0, 'defaultLowOutputLatency': 0.005804988662131519, 'defaultHighInputLatency': -1.0, 'defaultHighOutputLatency': 0.034829931972789115, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 6, 'structVersion': 2, 'name': 'default', 'hostApi': 0, 'maxInputChannels': 128, 'maxOutputChannels': 128, 'defaultLowInputLatency': 0.021333333333333333, 'defaultLowOutputLatency': 0.021333333333333333, 'defaultHighInputLatency': 0.021333333333333333, 'defaultHighOutputLatency': 0.021333333333333333, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 7, 'structVersion': 2, 'name': 'dmix', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': -1.0, 'defaultLowOutputLatency': 0.021333333333333333, 'defaultHighInputLatency': -1.0, 'defaultHighOutputLatency': 0.021333333333333333, 'defaultSampleRate': 48000.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ALSA lib conf.c:4028:(snd_config_hooks_call) Cannot open shared library libasound_module_conf_pulse.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_conf_pulse.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib control.c:1570:(snd_ctl_open_noupdate) Invalid CTL hw:0\n",
+      "ALSA lib pcm.c:2675:(snd_pcm_open_noupdate) Unknown PCM cards.pcm.rear\n",
+      "ALSA lib pcm.c:2675:(snd_pcm_open_noupdate) Unknown PCM cards.pcm.center_lfe\n",
+      "ALSA lib pcm.c:2675:(snd_pcm_open_noupdate) Unknown PCM cards.pcm.side\n",
+      "ALSA lib pcm_route.c:878:(find_matching_chmap) Found no matching channel map\n",
+      "ALSA lib pcm_route.c:878:(find_matching_chmap) Found no matching channel map\n",
+      "ALSA lib pcm_route.c:878:(find_matching_chmap) Found no matching channel map\n",
+      "ALSA lib pcm_route.c:878:(find_matching_chmap) Found no matching channel map\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_rate_samplerate.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_rate_samplerate.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib pcm_rate.c:1581:(snd_pcm_rate_open) Cannot find rate converter\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_rate_samplerate.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_rate_samplerate.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib pcm_rate.c:1581:(snd_pcm_rate_open) Cannot find rate converter\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_rate_speexrate.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_rate_speexrate.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib pcm_rate.c:1581:(snd_pcm_rate_open) Cannot find rate converter\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_rate_speexrate.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_rate_speexrate.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib pcm_rate.c:1581:(snd_pcm_rate_open) Cannot find rate converter\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_jack.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_jack.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_jack.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_jack.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_oss.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_oss.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_oss.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_oss.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_pulse.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_pulse.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_pulse.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_pulse.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_upmix.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_upmix.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_upmix.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_upmix.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_vdownmix.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_vdownmix.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_vdownmix.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_vdownmix.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_usb_stream.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_usb_stream.so: cannot open shared object file: No such file or directory)\n",
+      "ALSA lib dlmisc.c:339:(snd_dlobj_cache_get0) Cannot open shared library libasound_module_pcm_usb_stream.so (/home/jeo/miniconda3/envs/speech/lib/alsa-lib/libasound_module_pcm_usb_stream.so: cannot open shared object file: No such file or directory)\n"
+     ]
+    }
+   ],
    "source": [
     "import pyaudio\n",
     "\n",
@@ -24,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +216,7 @@
        " 'default_samplerate': 48000.0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +255,7 @@
        "6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,102 +348,6 @@
     "        results = rec.Result()\n",
     "        text = json.loads(results)[\"text\"]\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13757e7f56a9468b8fa9ea0abe537c06",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='Record', icon='microphone ', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e02f3631caa4fd5ad5ac3a7dde1071c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='warning', description='Record', icon='stop', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25737e38710545a88fb7e89386a68661",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "from queue import Queue\n",
-    "from threading import Thread\n",
-    "\n",
-    "messages = Queue()\n",
-    "recordings = Queue()\n",
-    "\n",
-    "record_button = widgets.Button(\n",
-    "    description='Record',\n",
-    "    disabled=False,\n",
-    "    button_style='success',\n",
-    "    tooltip='Record',\n",
-    "    icon='microphone'\n",
-    ")\n",
-    "\n",
-    "stop_button = widgets.Button(\n",
-    "    description='Stop',\n",
-    "    disabled=False,\n",
-    "    button_style='warning',\n",
-    "    tooltip='Stop',\n",
-    "    icon='stop'\n",
-    ")\n",
-    "\n",
-    "output = widgets.Output()\n",
-    "\n",
-    "def start_recording(data):\n",
-    "    messages.put(True)\n",
-    "    \n",
-    "    with output:\n",
-    "        display(\"Starting...\")\n",
-    "        record = Thread(target=record_microphone)\n",
-    "        record.start()\n",
-    "        transcribe = Thread(target=speech_recognition, args=(output,))\n",
-    "        transcribe.start()\n",
-    "\n",
-    "def stop_recording(data):\n",
-    "    with output:\n",
-    "        messages.get()\n",
-    "        display(\"Stopped.\")\n",
-    "    \n",
-    "record_button.on_click(start_recording)\n",
-    "stop_button.on_click(stop_recording)\n",
-    "\n",
-    "display(record_button, stop_button, output)"
    ]
   }
  ],
